Fix head-box bottom-link-wrap visibility and remove hardcoded 'mehr erfahren' text
- Fixed CSS positioning for bottom-link-wrap class to display properly
- Removed hardcoded 'mehr erfahren' text from head-box template
- Fixed syntax error in aria-label attribute
- Now uses ACF field content for link text instead of hardcoded text

--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -99,7 +99,7 @@ main {
 
 .dropdown-item:hover,
 .dropdown-item:focus {
-  color: #9baa8a;
+  color: #000000;
   background-color: transparent;
 }
 
@@ -127,14 +127,14 @@ main {
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-  color: #9baa8a;
+  color: #000000;
 }
 
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #9baa8a;
+  color: #000000;
 }
 
 /* mega menu start */
